--- a/Views/Auth/ForgotPassword.cshtml
+++ b/Views/Auth/ForgotPassword.cshtml
@@ -44,7 +44,7 @@
                                 }
                             </div>
                             <div class="card-footer text-center">
-                                <div class="small">@Html.ActionLink("Quay lại trang chủ", "Login", null, new { style = "text-decoration: none; color: #001D85;" })</div>
+                                <div class="small">@Html.ActionLink("Quay lại trang chủ", "Index", null, new { style = "text-decoration: none; color: #001D85;" })</div>
                             </div>
                         </div>
                     </div>
