update layout liencap

--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -339,7 +339,8 @@
             </div>
             <div class="text-center mt-4">
                 <div class="small"><a id="showSignup" style="text-decoration: none; color: #001D85;" href="#">Bạn chưa đăng kí thông tin? <b>Đăng kí tại đây</b></a></div>
-                <div class="small"><a style="text-decoration: none; color: #001D85; " href="@Url.Action("ForgotPassword", "Auth")">Bạn quên mật khẩu? <b>Đặt lại mật khẩu</b></a></div>
+                <div class="small mt-2"><a style="text-decoration: none; color: #001D85; " href="@Url.Action("ForgotPassword", "Auth")">Bạn quên mật khẩu? <b>Đặt lại mật khẩu</b></a></div>
+                <div class="small mt-2"><a style="text-decoration: none; color: #001D85; " href="@Url.Action("ForgotPassword", "Auth")">Đăng ký xét tuyển Trường TH, THCS, THPT Hồng Đức? <b>Tại đây</b></a></div>
             </div>
         </div>
 
