--- a/Views/LienCapTHCS/Create.cshtml
+++ b/Views/LienCapTHCS/Create.cshtml
@@ -35,7 +35,8 @@
                 var sfilename_hocba = files_hocba.files[i].name;
                 let srandomid_hocba = Math.random().toString(36).substring(7);
                 HocBaFormData.append(sfilename_hocba, files_hocba.files[i]);
-                var markup = "<tr id='" + srandomid_hocba + "'><td  style='color:blue'>Tệp " + j + ": </td><td>" + sfilename_hocba + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_hocba + "\",\"" + sfilename_hocba + "\")'>Xóa</a></td></tr>";
+                var markup = `<tr id='${srandomid_hocba}'><td  style='color:blue'>Tệp ${j}: </td><td>${sfilename_hocba}</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none'` +
+                    `title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteUploadedFile("HOCBA", "#FilesList_HocBa_View", "${srandomid_hocba}", "${sfilename_hocba}")'>Xóa</a></td></tr>`;
                 $("#FilesList_HocBa_View tbody").append(markup);
             }
             CheckAttachTable("#FilesList_HocBa_View");
@@ -49,7 +50,8 @@
                 var sfilename_hocba = files_hocba.files[i].name;
                 let srandomid_hocba = Math.random().toString(36).substring(7);
                 GiayKSFormData.append(sfilename_hocba, files_hocba.files[i]);
-                var markup = "<tr id='" + srandomid_hocba + "'><td  style='color:blue'>Tệp " + j + ": </td><td>" + sfilename_hocba + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_hocba + "\",\"" + sfilename_hocba + "\")'>Xóa</a></td></tr>";
+                var markup = `<tr id='${srandomid_hocba}'><td  style='color:blue'>Tệp ${j}: </td><td>${sfilename_hocba}</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none'` +
+                    `title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteUploadedFile("GIAYKS", "#FilesList_GiayKS_View", "${srandomid_hocba}", "${sfilename_hocba}")'>Xóa</a></td></tr>`;
                 $("#FilesList_GiayKS_View tbody").append(markup);
             }
             CheckAttachTable("#FilesList_GiayKS_View");
@@ -63,7 +65,8 @@
                 var sfilename_hocba = files_hocba.files[i].name;
                 let srandomid_hocba = Math.random().toString(36).substring(7);
                 LePhiFormData.append(sfilename_hocba, files_hocba.files[i]);
-                var markup = "<tr id='" + srandomid_hocba + "'><td  style='color:blue'>Tệp " + j + ": </td><td>" + sfilename_hocba + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_hocba + "\",\"" + sfilename_hocba + "\")'>Xóa</a></td></tr>";
+                var markup = `<tr id='${srandomid_hocba}'><td  style='color:blue'>Tệp ${j}: </td><td>${sfilename_hocba}</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none'` +
+                    `title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteUploadedFile("LEPHI", "#FilesList_LePhi_View", "${srandomid_hocba}", "${sfilename_hocba}")'>Xóa</a></td></tr>`;
                 $("#FilesList_LePhi_View tbody").append(markup);
             }
             CheckAttachTable("#FilesList_LePhi_View");
@@ -77,7 +80,8 @@
                 var sfilename_hocba = files_hocba.files[i].name;
                 let srandomid_hocba = Math.random().toString(36).substring(7);
                 MaDinhDanhFormData.append(sfilename_hocba, files_hocba.files[i]);
-                var markup = "<tr id='" + srandomid_hocba + "'><td  style='color:blue'>Tệp " + j + ": </td><td>" + sfilename_hocba + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_hocba + "\",\"" + sfilename_hocba + "\")'>Xóa</a></td></tr>";
+                var markup = `<tr id='${srandomid_hocba}'><td  style='color:blue'>Tệp ${j}: </td><td>${sfilename_hocba}</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none'` +
+                    `title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteUploadedFile("DINHDANH", "#FilesList_MaDinhDanh_View", "${srandomid_hocba}", "${sfilename_hocba}")'>Xóa</a></td></tr>`;
                 $("#FilesList_MaDinhDanh_View tbody").append(markup);
             }
             CheckAttachTable("#FilesList_MaDinhDanh_View");
@@ -91,7 +95,8 @@
                 var sfilename_hocba = files_hocba.files[i].name;
                 let srandomid_hocba = Math.random().toString(36).substring(7);
                 UuTienFormData.append(sfilename_hocba, files_hocba.files[i]);
-                var markup = "<tr id='" + srandomid_hocba + "'><td  style='color:blue'>Tệp " + j + ": </td><td>" + sfilename_hocba + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_hocba + "\",\"" + sfilename_hocba + "\")'>Xóa</a></td></tr>";
+                var markup = `<tr id='${srandomid_hocba}'><td  style='color:blue'>Tệp ${j}: </td><td>${sfilename_hocba}</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none'` +
+                    `title='Xóa bớt tệp nếu không đúng' href='#' onclick='DeleteUploadedFile("UUTIEN", "#FilesList_UuTien_View", "${srandomid_hocba}", "${sfilename_hocba}")'>Xóa</a></td></tr>`;
                 $("#FilesList_UuTien_View tbody").append(markup);
             }
             CheckAttachTable("#FilesList_UuTien_View");
@@ -324,10 +329,16 @@
         return isValid;
     }
 
-    function DeleteFile_HoBas_Upload(Fileid, FileName) {
-        HocBaFormData.delete(FileName)
+    function DeleteUploadedFile(FormDataName, ListId, Fileid, FileName) {
+        let formData = null;
+        if (FormDataName == "HOCBA") formData = HocBaFormData;
+        if (FormDataName == "GIAYKS") formData = GiayKSFormData;
+        if (FormDataName == "LEPHI") formData = LePhiFormData;
+        if (FormDataName == "DINHDANH") formData = MaDinhDanhFormData;
+        if (FormDataName == "UUTIEN") formData = UuTienFormData;
+        formData.delete(FileName)
         $("#" + Fileid).remove();
-        CheckAttachTable();
+        CheckAttachTable(ListId);
     }
     function CheckAttachTable(list) {
         if ($(`${list} tr`).length > 1) {
@@ -359,6 +370,7 @@
                     contentType: false,
                     async: false,
                     success: function (response) {
+                        console.log(response)
                         if (response.success) {
                             savedPath = response.message;
                         }
@@ -447,7 +459,7 @@
             </div>
         </div>
         <div class="card card-header-actions mt-3 mb-1 ">
-            <div class="card-header">Đăng ký xét tuyển vào lớp 6<a onclick="onCreate()" class="btn btn-primary">Đăng ký</a></div>
+            <div class="card-header">Đăng ký xét tuyển vào lớp 6</div>
             <div class="card-body">
                 <div class="row gx-xxl-3 mb-1">
                     <div class="col-md-3">
@@ -573,8 +585,8 @@
                         <span id="HocSinh_MucDoPhamChat" class="small mb-1 text-danger"></span>
                     </div>
                 </div>
-
-                <div class="card-header mt-4">Minh chứng</div>
+                @*
+                    <div class="card-header mt-4">Minh chứng</div>*@
                 <div class="row gx-xxl-3 mb-1">
                     <div class="col-md-4">
                         <label class="form-label mb-1" for="HocSinh_NoiCuTru">Học bạ </label>
@@ -582,7 +594,7 @@
                             <input class="form-control" id="files_hocba" multiple="multiple" name="files" type="file"
                                    accept="application/pdf,.png, .jpeg, .jpg" />
                             <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
-                            <table class="table" id="FilesList_HocBa_View" style="visibility:hidden">
+                            <table class="table" id="FilesList_HocBa_View" style="visibility:hidden; width: 100%">
                                 <tr style="display:none">
                                     <th colspan="3"><input type="hidden" id="HocBa_Files" /></th>
                                 </tr>
@@ -640,6 +652,11 @@
                                 </tr>
                             </table>
                         </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-1">
+                    <div class="col-auto">
+                        <button type="button" onclick="onCreate()" class="btn btn-primary btm-sm">Đăng ký</button>
                     </div>
                 </div>
             </div>
