--- a/Views/Shared/_LayoutLienCap.cshtml
+++ b/Views/Shared/_LayoutLienCap.cshtml
@@ -44,10 +44,10 @@
                         <div class="sidenav-menu-heading">MENU</div>
 
                         <!-- Sidenav Accordion (Dashboard)-->
-                       @* <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKies")">
+                        <a class="nav-link" href="@Url.Action("Index", "LienCapTHCS")">
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
                             Trang chủ
-                        </a>*@
+                        </a>
                         <a class="nav-link" href="@Url.Action("Create", "LienCapTieuHocs")">
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
                             Đăng ký lớp 1
